--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body{
 .hero_block{
   background-image: url(/img/background_hero.png);
   height: 1000px;
-  width: 1920px;
+  max-width: 1920px;
   display: flex;
   padding: 4px 0;
   flex-direction: column;
@@ -65,8 +65,10 @@ body{
 }
 
 .hero_text_block{
-  width: 1760px;
+  max-width: 1760px;
+  padding: 0 100px;
   background-color: rgba(217, 217, 217, 0.6);
+  border-radius: 12px;
 }
 
 /*about*/
@@ -74,7 +76,7 @@ body{
 .about_reviews_block{
   padding-top: 75px;
   background-image: url(/img/background_about.png);
-  height: 1780px;
+  min-height: 1780px;
   max-width: 100%;
 }
 
@@ -169,8 +171,8 @@ body{
 
 .feedback_form>input{
   padding: 15px;
-  width: 600px;
-  height: 100px;
+  max-width: 600px;
+  max-height: 100px;
   font-style: normal;
   font-weight: 400;
   font-size: 32px;
@@ -184,8 +186,8 @@ body{
 
 .feedback_form>textarea{
   padding: 15px;
-  width: 600px;
-  height: 450px;
+  max-width: 600px;
+  min-height: 450px;
   font-style: normal;
   font-weight: 400;
   font-size: 32px;
